# insider_detect

./: .gitignore  alembic.ini  pyproject.toml
ansible/: inventory.yml  site.yml.exm
ansible/roles/insider_core/templates/: env.core.j2
app/: db.py  rules_engine.py  settings.py
app/api/: deps.py
app/core/: lifespan.py
app/integrations/: telegram.py
app/models/: alert.py  event.py  profile.py
app/routers/: alerts.py  events.py  health.py  ingest.py  profiles.py  rules.py
app/schemas/: alert.py  event.py  profile.py
app/services/: alerts.py  event.py  ingest.py  ingest_service.py  rules.py
app/utils/: formatting.py
deployments/core/: docker-compose.core.yml
deployments/sensor/: docker-compose.sensor.yml
loadtests/: ingest_load.py
migrations/: env.py
migrations/versions/: e8bbef329343_init_schema.py
rules/: rules.yaml
sensor/: ftp_server.py  http_service.py
sensors/: http_service.py
tests/: conftest.py
tests/integration/: conftest.py  test_api_alerts.py  test_api_events.py  test_api_ingest.py  test_api_profiles.py  test_ingest_service.py
tests/unit/: test_decay_risk.py  test_dedup.py  test_evaluate_rules.py  test_formatting.py  test_ftp_sensor.py  test_http_sensor.py  test_is_off_hours.py  test_load_rules.py  test_match_rule.py  test_schemas_event.py  test_services_alerts.py  test_services_rules.py  test_telegram.py
